package com.bsuir.adhubbackand.model.enums;

public enum AdStatus {
    ACTIVE,
    DRAFT,
    ON_MODERATION,
    BLOCKED,
    DELETED,
    ARCHIVED
}
